tests/specs/run/error_syntax_empty_trailing_line/error_syntax_empty_trailing_line.mjs.out
error: The module's source code could not be parsed: Unexpected eof at [WILDCARD]/error_syntax_empty_trailing_line.mjs:3:1

  setTimeout(() => {}),
  ~~~~~~~~~~~~~~~~~~~~~

  ~
